Diseño login y registro ajustado

--- a/src/app/components/influencer-account/influencer-account.component.html
+++ b/src/app/components/influencer-account/influencer-account.component.html
@@ -38,7 +38,7 @@
                 </div>
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Password *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
-                    <input type="password" class="form-control" placeholder="Password *"
+                    <input type="text" class="form-control" placeholder="Password *"
                            formControlName="password">
                 </div>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
