--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,41 +1,43 @@
-<div class="container register">
-    <div class="row">
-        <div class="col-md-3 register-left">
-            <img src="assets/img/Logo_blanco.png" alt="INCO logo">
-            <h1>INCO</h1>
-        </div>
-        <div class="col-md-9 register-right">
-            <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
-                    <h3 class="register-heading">Login</h3>
-                    <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="sendLogin()">
-                        <div class="row register-form P-validation">
-                            <div class="col-12">
-                                <div class="form-group">
-                                    <input type="text"
-                                           class="form-control"
-                                           placeholder="User Name *"
-                                           formControlName="name_user">
+<div class="register">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 register-left">
+                <img src="assets/img/Logo_blanco.png" alt="INCO logo">
+                <h1>INCO</h1>
+            </div>
+            <div class="col-md-9 register-right">
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
+                        <h3 class="register-heading">Login</h3>
+                        <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="sendLogin()">
+                            <div class="row register-form P-validation">
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <input type="text"
+                                               class="form-control"
+                                               placeholder="User Name *"
+                                               formControlName="name_user">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password"
+                                               class="form-control"
+                                               placeholder="Password *"
+                                               formControlName="password">
+                                    </div>
+                                    <div class="btn-group-vertical btn-group-lg">
+                                        <a routerLink="/reset-password">I forgot my password</a>
+                                        <a routerLink="/register">Create an account</a>
+                                    </div>
+                                    <button type="submit"
+                                            class="btnRegister"
+                                            [disabled]="!loginForm.valid">
+                                        Login
+                                    </button>
+                                    <p id="demo" class="P-validation"></p>
                                 </div>
-                                <div class="form-group">
-                                    <input type="password"
-                                           class="form-control"
-                                           placeholder="Password *"
-                                           formControlName="password">
-                                </div>
-                                <div class="btn-group-vertical btn-group-lg">
-                                    <a routerLink="/reset-password">I forgot my password</a>
-                                    <a routerLink="/register">Create an account</a>
-                                </div>
-                                <button type="submit"
-                                        class="btnRegister"
-                                        [disabled]="!loginForm.valid">
-                                    Login
-                                </button>
-                                <p id="demo" class="P-validation"></p>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
