--- a/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
+++ b/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
@@ -1,11 +1,11 @@
 <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about container">
         <div class="container">
 
             <div class="section-title">
-                <h2>¿Quiénes Somos?</h2>
+                <h2>About Us</h2>
                 <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
                     consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
                     fugiat sit in iste officiis commodi quidem hic quas.</p>
@@ -23,7 +23,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <section id="facts" class="facts container">
         <div class="container">
 
             <div class="section-title">
