--- a/src/app/components/influencer-settings/influencer-settings.component.html
+++ b/src/app/components/influencer-settings/influencer-settings.component.html
@@ -3,58 +3,76 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
         <div class="container">
-            <h2>Configuration</h2>
-            <br>
+            <h2 class="col-lg-12 d-md-flex align-items-md-stretch mb-4">
+                Configuration
+            </h2>
+
             <form *ngIf="userForm" [formGroup]="userForm" (ngSubmit)="updateUser()" class="section-title">
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">User Name *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
                     <input type="text" class="form-control" placeholder="User Name *"
                            formControlName="name_user">
                 </div>
+
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Name *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
                     <input type="text" class="form-control" placeholder="Name *"
                            formControlName="name">
                 </div>
+
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Last Name *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
                     <input type="text" class="form-control" placeholder="Last Name *"
                            formControlName="last_name">
                 </div>
+
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Your Email *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
                     <input type="email" class="form-control" placeholder="Your Email *"
                            formControlName="email">
                 </div>
+
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Gender *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
                     <input type="text" class="form-control" placeholder="Gender *"
                            formControlName="gender">
                 </div>
+
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">ID *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
                     <input type="text" class="form-control" placeholder="ID *"
-                           formControlName="CC" minlength="8" maxlength="10" autocomplete="off">
+                           formControlName="CC" minlength="8" maxlength="10" autocomplete="off" readonly>
                 </div>
+
                 <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Password *</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
-                    <input type="text" class="form-control" placeholder="Password *"
-                           formControlName="password">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <a class="input-group-text" (click)="changeTypePassword()">
+                                <i class="bi bi-eye" *ngIf="typePassword === 'password'"></i>
+                                <i class="bi bi-eye-fill" *ngIf="typePassword === 'text'"></i>
+                            </a>
+                        </div>
+                        <input [type]="typePassword" class="form-control" placeholder="Password *"
+                               formControlName="password">
+                    </div>
                 </div>
+
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">User photo</p>
                 <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
-                    <h6>User photo</h6>
                     <input type="file" accept="image/png, image/gif, image/jpeg">
                 </div>
-                <div>
-                    <h6>influencer photo</h6>
+
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">influencer photo</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
                     <input type="file" accept="image/png, image/gif, image/jpeg">
                 </div>
-                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
-                    <small id="emailHelp" class="form-text text-muted ">Update u "about me" </small>
+
+                <div class="col-lg-12 d-md-flex align-items-md-stretch justify-content-md-end form-group mt-4">
+                    <button type="submit" class="btn btn-primary btn-lg" [disabled]="!userForm.valid">
+                        Update
+                    </button>
                 </div>
-                <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid">
-                    Update
-                </button>
             </form>
         </div>
     </section><!-- End About Section -->
