--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,19 +12,32 @@
                         <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="sendLogin()">
                             <div class="row register-form P-validation">
                                 <div class="col-12">
-                                    <div class="form-group">
+                                    <div class="input-group mb-2">
+                                        <div class="input-group-prepend">
+                                            <a class="input-group-text">
+                                                <i class="bi bi-person"></i>
+                                            </a>
+                                        </div>
                                         <input type="text"
                                                class="form-control"
                                                placeholder="User Name *"
                                                formControlName="name_user">
                                     </div>
-                                    <div class="form-group">
-                                        <input type="password"
+
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <a class="input-group-text" (click)="changeTypePassword()">
+                                                <i class="bi bi-eye" *ngIf="typePassword === 'password'"></i>
+                                                <i class="bi bi-eye-fill" *ngIf="typePassword === 'text'"></i>
+                                            </a>
+                                        </div>
+                                        <input [type]="typePassword"
                                                class="form-control"
                                                placeholder="Password *"
                                                formControlName="password">
                                     </div>
-                                    <div class="btn-group-vertical btn-group-lg">
+
+                                    <div class="btn-group-vertical btn-group-lg mt-4">
                                         <a routerLink="/reset-password">I forgot my password</a>
                                         <a routerLink="/register">Create an account</a>
                                     </div>
