--- a/src/styles.css
+++ b/src/styles.css
@@ -10886,3 +10886,6 @@ a.text-dark:hover, a.text-dark:focus {
 .loading-container svg {
     z-index: 2;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
