--- a/src/styles.css
+++ b/src/styles.css
@@ -10889,3 +10889,6 @@ a.text-dark:hover, a.text-dark:focus {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
