--- a/src/app/components/register-influencer/register-influencer.component.css
+++ b/src/app/components/register-influencer/register-influencer.component.css
@@ -1,3 +1,7 @@
-body{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+    background-color: #3931af;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+    background-color: #00c6ff;  
 }
