Entrepreneurs views implementation and corrections of influencer view

--- a/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
+++ b/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
@@ -12,12 +12,6 @@
             </div>
             <div class="justify-content-center">
                 <img src="../../../assets/img/empanadas-local.jpg" class="col-lg-12 col-sm-12 col-md-8 py-1">
-                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
-                     class="col-lg-3 col-sm-12 col-md-8 py-1">
-                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
-                     class="col-lg-3 col-sm-12 col-md-8 py-1">
-                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
-                     class="col-lg-3 col-sm-12 col-md-8 py-1">
             </div>
         </div>
     </section><!-- End About Section -->
@@ -28,10 +22,8 @@
 
             <div class="section-title">
                 <!--Aquí puede ser mucho mejor trar los datos generales-->
-                <h2>Categorias</h2>
-                <ul>
-                    <li>Food</li>
-                </ul>
+                <h2>Categories</h2>
+                <h3>category</h3>
                 <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
                     consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
                     fugiat sit in iste officiis commodi quidem hic quas.</p>
@@ -44,7 +36,7 @@
                         <i class="bi bi-emoji-smile"></i>
                         <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Contactos realizados </strong>Cuantos emprendimientos se interezaron en Alex</p>
+                        <p><strong>NIT <br> </strong>1234567</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
@@ -52,22 +44,31 @@
                         <i class="bi bi-journal-richtext"></i>
                         <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Calificaciones</strong> Contactos que han dejado su opinión</p>
+                        <p><strong>Address <br></strong>wall street</p>
                     </div>
                 </div>
-                <!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+                  <div class="count-box">
+                      <i class="bi bi-globe"></i>
+                      <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
+                            class="purecounter"></span>
+                      <p><strong>Web domain <br></strong>www.empanaditas.com</p>
+                  </div>
+              </div>
+
+                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
                   <div class="count-box">
                     <i class="bi bi-headset"></i>
                     <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+                    <p><strong>Mail <br></strong> Empanaditas@ </p>
                   </div>
-                </div> -->
+                </div> 
                 <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
                     <div class="count-box">
-                        <i class="bi bi-people"></i>
+                        <i class="bi bi-telephone-fill"></i>
                         <span data-purecounter-start="0" data-purecounter-end="32550" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Total seguidores</strong> rerum asperiores dolor</p>
+                        <p><strong>Contact <br></strong> 555777</p>
                     </div>
                 </div>
             </div>
