--- a/src/app/components/influencer-profile/influencer-profile.component.html
+++ b/src/app/components/influencer-profile/influencer-profile.component.html
@@ -5,7 +5,7 @@
         <div class="container">
 
             <div class="section-title">
-                <h2>Acerca de mí</h2>
+                <h2>About Me</h2>
                 <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
                     consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
                     fugiat sit in iste officiis commodi quidem hic quas.</p>
@@ -13,12 +13,6 @@
             <div class="justify-content-center">
                 <img src="https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg"
                      class="col-lg-12 col-sm-12 col-md-8 py-1">
-                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
-                     class="col-lg-3 col-sm-12 col-md-8 py-1">
-                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
-                     class="col-lg-3 col-sm-12 col-md-8 py-1">
-                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
-                     class="col-lg-3 col-sm-12 col-md-8 py-1">
             </div>
         </div>
     </section><!-- End About Section -->
@@ -29,10 +23,7 @@
 
             <div class="section-title">
                 <!--Aquí puede ser mucho mejor trar los datos generales-->
-                <h2>Datos</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <h2>Facts</h2>
             </div>
 
             <div class="row no-gutters">
@@ -42,7 +33,7 @@
                         <i class="bi bi-emoji-smile"></i>
                         <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Contactos realizados </strong>Cuantos emprendimientos se interezaron en Alex</p>
+                        <p><strong>Contacts made </strong>Who many Entrepreneurs wre interested in Alex profile</p>
                     </div>
                 </div>
 
@@ -51,7 +42,7 @@
                         <i class="bi bi-journal-richtext"></i>
                         <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Calificaciones</strong> Contactos que han dejado su opinión</p>
+                        <p><strong>Score</strong>How many users gave a score to Alex profile</p>
                     </div>
                 </div>
 
@@ -60,7 +51,7 @@
                         <i class="bi bi-people"></i>
                         <span data-purecounter-start="0" data-purecounter-end="32550" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Total seguidores</strong> rerum asperiores dolor</p>
+                        <p><strong>Followers</strong> 10000</p>
                     </div>
                 </div>
             </div>
